--- a/module1/lesson18/task1/package.json
+++ b/module1/lesson18/task1/package.json
@@ -15,6 +15,7 @@
   "author": "PavelL",
   "license": "ISC",
   "devDependencies": {
-    "rollup": "^2.68.0"
+    "rollup": "^2.68.0",
+    "rollup-plugin-styles": "^4.0.0"
   }
 }
