--- a/module1/lesson18/task1/package.json
+++ b/module1/lesson18/task1/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "rollup": "^2.68.0",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-styles": "^4.0.0"
   }
 }
