--- a/module1/lesson18/task1/package.json
+++ b/module1/lesson18/task1/package.json
@@ -15,6 +15,8 @@
   "author": "PavelL",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@rollup/plugin-babel": "^5.3.1",
     "rollup": "^2.68.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-styles": "^4.0.0"
