--- a/module1/lesson18/task1/package.json
+++ b/module1/lesson18/task1/package.json
@@ -19,6 +19,8 @@
     "@rollup/plugin-babel": "^5.3.1",
     "rollup": "^2.68.0",
     "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-styles": "^4.0.0"
   }
 }
