--- a/module1/lesson18/task3/package.json
+++ b/module1/lesson18/task3/package.json
@@ -4,7 +4,8 @@
   "description": "Studying webpack",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "start": "webpack serve"
   },
   "keywords": [
     "webpack",
