--- a/module1/lesson19/lessonTask/package.json
+++ b/module1/lesson19/lessonTask/package.json
@@ -22,5 +22,9 @@
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
+  },
+  "dependencies": {
+    "moment": "^2.29.1",
+    "moment-precise-range-plugin": "^1.3.0"
   }
 }
